@@ -1,8 +1,7 @@
 {:group-id "frozar",
  :artifact-id "roughcljs",
  :version "0.2.4",
- :analysis {"clj" (),
-            "cljs" ({:name roughcljs.core,
+ :analysis {"cljs" ({:name roughcljs.core,
                      :publics ({:name arc,
                                 :file "roughcljs/core.cljs",
                                 :line 173,
